--- a/src/main/webapp/css/styles.css
+++ b/src/main/webapp/css/styles.css
@@ -91,10 +91,11 @@ div.coursename {
 
 div.addinf {
     font-size: 12pt;
+    padding-left: 20px;
 }
 
 div.rating-text {
-    padding-top: 15px;
+    font-size: 18px;
     font-family: 'CurcumRegular';
     text-align: left;
 }
@@ -105,6 +106,7 @@ div.rating-text {
 }
 
 .rating-mini span {
+    padding-top: 15px;
     padding: 0;
     font-size: 18px;
     line-height: 1;
@@ -114,6 +116,7 @@ div.rating-text {
 .rating-mini>span.active {
     color: gold;
     background-color: white;
+    cursor: default;
 }
 
 a.button.fuck {
@@ -236,6 +239,7 @@ input.invalid {
 
 table {
     border: none;
+    padding: 25px;
 }
 
 tbody {
@@ -259,6 +263,10 @@ table tr:last-child {
     background-color: #1E0000;
 }
 
+table.usertable tr:last-child {
+    background-color: transparent;
+}
+
 button.hollow.success {
     border-color: white;
 }
@@ -267,6 +275,7 @@ button.hollow.success {
     font-family: 'SofiaProMedium';
     font-size: 18pt;
     text-align: center;
+    cursor: default;
 }
 
 .hidden {
@@ -293,16 +302,32 @@ button.hollow.success {
     border-radius: 3px;
 }
 
-.inputq
-{
+.inputq {
     border-radius: 3px;
     background: none;
     width: 10%;
 }
 
-.inputq:valid
-{
+.inputq:valid {
     border-radius: 3px;
     background: none;
     width: 10%;
+}
+
+.comment {
+    border-radius: 6px;
+    border-color: wheat;
+    border: 2px solid;
+    padding: 10px;
+    padding-right: 0;
+}
+
+.nav {
+    color: black;
+    font-family: 'SofiaProLight';
+    font-size: 19pt;
+}
+
+.nav:visited {
+    color: black;
 }
